include xls download for teachers and jsonresponse for teachers. Echart unsuccess

--- a/djangosite_one/templates/subject.html
+++ b/djangosite_one/templates/subject.html
@@ -5,6 +5,7 @@
     <title>ALL SUBJECTS</title>
 </head>
 <body>
+    {% include 'header.html' %}
     <h1>ALL SUBJECTS</h1>
     <hr>
     {% for subject in subjects %}
