注册页面及逻辑

--- a/ph/ph/templates/theme.html
+++ b/ph/ph/templates/theme.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<title> {% block pgtitle %}	页面标题	{% endblock pgtitle %}</title>
 	<!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
@@ -24,7 +24,7 @@
 		        <a class="nav-link" href="#">登录</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">注册</a>
+		        <a class="nav-link" href=" {% url 'accounts:signup' %}" tabindex="-1" aria-disabled="true">注册</a>
 		      </li>
 		    </ul>
 		    <!--form class="form-inline my-2 my-lg-0">
@@ -33,9 +33,8 @@
 		    </form-->
 		  </div>
 		</nav>
-	这是所有网页的主题
 	{% block content %}
-		
+		本主题下：每个网页的主要内容
 	{% endblock content %}
 
 	</main>
