--- a/ph/products/templates/product_list.html
+++ b/ph/products/templates/product_list.html
@@ -1,14 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>产品页面</title>
-</head>
-<body>
-</body>
-</html>
-
 {% extends "theme.html" %}
 
+{% block pgtitle %}
+	产品页面
+{% endblock pgtitle %}
 {% block content %}
-	这是产品主要内容
+	产品内容
 {% endblock content %}
