--- a/ph/ph/templates/theme.html
+++ b/ph/ph/templates/theme.html
@@ -15,12 +15,15 @@
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
-		  <a class="navbar-brand" href="{% url 'product_page' %}">
+		  <a class="navbar-brand" href="{% url 'products:product_page' %}">
 		  	<img src=" {% static "logo.png" %} " height="30">
 		  	PH克隆</a>
 		  <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
 		    <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
 		    	{% if user.is_authenticated %}
+			      <li class="nav-item ">
+			        <a class="nav-link" href="{% url 'products:new_prod' %}">发布</a>
+			      </li>
 		    		<li class="nav-item ">
 		        		<a class="nav-link" href="JavaScript:{document.getElementById('logout').submit()}">登出</a>
         				<form method='POST' id ='logout' action='{% url 'accounts:logout' %}'>
