--- a/shop/myauth/templates/myauth/index.html
+++ b/shop/myauth/templates/myauth/index.html
@@ -1,17 +1,5 @@
-<!DOCTYPE html>
-<html lang="zh-hans" dir="ltr">
-    <head>
-        <meta charset="utf-8">
-        <title>Home Page</title>
-    </head>
-    <body>
-        <h1>Home Page</h1>
-        
-        {% if user.is_authenticated %}
-        	<a href="{% url 'myauth:logout'%}">登出</a>
-        {% else %}
-        	<a href="{% url 'myauth:login'%}">登录</a>
-        	<a href="{% url 'myauth:register'%}">注册</a>
-        {% endif %}
-    </body>
-</html>
+{% extends "theme.html" %}
+{% block pgtitle %}
+    Home-Page
+{% endblock pgtitle %}
+
