--- a/shop/myauth/templates/myauth/login.html
+++ b/shop/myauth/templates/myauth/login.html
@@ -1,17 +1,16 @@
-<!DOCTYPE html>
-<html lang="zh-hans">
-    <head>
-        <meta charset="utf-8">
-        <title>Login Page</title>
-    </head>
-    <body>
-        <form class="" action="" method="POST">
-            {% csrf_token %}
-            {{ error }}
-            <input type="text" name="username" value="" placeholder="用户名">
-            <input type="password" name="password" value="" placeholder="密码">
-            <button type="submit" name="submit">提交</button>
-            <a href="{% url 'myauth:index'%}">返回主页</a>
-        </form>
-    </body>
-</html>
+{% extends "theme.html" %}
+{% block pgtitle %}
+    用户注册
+{% endblock pgtitle %}
+
+
+{% block main_content %}
+    <form class="" action="" method="POST">
+        {% csrf_token %}
+        {{ error }}
+        <input type="text" name="username" value="" placeholder="用户名">
+        <input type="password" name="password" value="" placeholder="密码">
+        <button type="submit" name="submit">提交</button>
+        <a href="{% url 'myauth:index'%}">返回主页</a>
+    </form>
+{% endblock main_content %}
