--- a/mdn/catalog/templates/index.html
+++ b/mdn/catalog/templates/index.html
@@ -15,4 +15,6 @@
     <li><strong>Genres:</strong> {{ num_genres }}</li>
     <li><strong>Keyword "失落":</strong> {{ num_books_keyword }}</li>
   </ul>
+  <p>You have visited this page {{ num_visits }}{% if num_visits == 1 %} time{% else %} times{% endif %}.</p>
 {% endblock %}
+
