--- a/mdn/catalog/templates/base_generic.html
+++ b/mdn/catalog/templates/base_generic.html
@@ -5,9 +5,18 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <style>
+/*    .sidebar-nav {
+    margin-top: 20px;
+    padding: 0;
+    list-style: none;*/
+}
+
+  </style>
+
   <!-- Add additional CSS in static file -->
   {% load static %}
-  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+  <link rel="stylesheet" href="{% static 'catalog/css/styles.css' %}">
 </head>
 <body>
   <div class="container-fluid">
@@ -18,22 +27,23 @@
           <li><a href="{% url 'index' %}">主页</a></li>
           <li><a href=" {% url 'books' %} ">所有书籍</a></li>
           <li><a href="{% url 'authors' %} ">所有作者</a></li>
-        </ul>
-        <hr>
+
+            <hr>
              {% if user.is_authenticated %}
                <li>用户: {{ user.get_username }}</li>
                <li><a href="{% url 'my-borrowed' %}">我的借阅</a></li>
-               <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>   
+               <li><a href="{% url 'logout'%}?next={{request.path}}">退出登录</a></li>   
             {% else %}
-                <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>   
+                <li><a href="{% url 'login'%}?next={{request.path}}">登录</a></li>   
             {% endif %} 
-        </ul>
+
             {% if perms.catalog.can_mark_returned %}
                <hr>
                <li><strong>管理员功能</strong></li>
 
                <li><a href="{% url 'all-loaned' %} ">所有借阅</a></li>
-                </li>   
+                </li>
+             </ul>   
             {% endif %} 
      {% endblock %}
       {% block pagination %}
