--- a/mdn/catalog/templates/catalog/bookinstance_all_loaned.html
+++ b/mdn/catalog/templates/catalog/bookinstance_all_loaned.html
@@ -11,7 +11,7 @@
 
       {% for bookinst in bookinstance_list %} 
       <li class="{% if bookinst.is_overdue %}text-danger{% endif %}">
-        <a href="{% url 'book-detail' bookinst.book.pk %}">{{bookinst.book.title}}</a>     ({% if bookinst.is_overdue %}已超期！--{% endif %}计划归还时间：{{ bookinst.due_back }})---{{bookinst.borrower.username}}
+        <a href="{% url 'book-detail' bookinst.book.pk %}">{{bookinst.book.title}}</a>     ({% if bookinst.is_overdue %}已超期！--{% endif %}计划归还时间：{{ bookinst.due_back }})---{{bookinst.borrower.username}}-- <a href="{% url 'renew-book-librarian' bookinst.id %}">续借</a>  
       </li>
       {% endfor %}
     </ul>
